# fastools

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  processedfasta  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
data/: demultiplex_processed_end.fq  demultiplex_processed_start.fq  demultiplex_x_both_sides.fq  demultiplex_x_dual_index.fq  demultiplex_x_dual_index_processed.fq
docs/: CONTRIBUTING.md  conf.py  credits.rst  index.rst  installation.rst  library.rst  usage.rst
fastools/: __init__.py  cli.py  demultiplex.py  exceptions.py  fastools.py  peeker.py  split_fasta.py  utils.py
tests/: test_cli.py  test_demultiplex.py  test_split_fasta.py
